<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.randytsao.virtualdrumpad.MainDrumPadActivity"
    tools:showIn="@layout/activity_main">


    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/padOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pad_one"
                android:onClick="onPadOneClick" />

            <Button
                android:id="@+id/padTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pad_two"
                android:onClick="onPadTwoClick" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/padThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pad_three"
                android:onClick="onPadThreeClick" />

            <Button
                android:id="@+id/padFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pad_four"
                android:onClick="onPadFourClick" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/padFive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pad_five"
                android:onClick="onPadFiveClick" />

            <Button
                android:id="@+id/padSix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pad_six"
                android:onClick="onPadSixClick" />
        </TableRow>

    </TableLayout>
</android.support.constraint.ConstraintLayout>
